--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,6 @@
 name: Tests
 
-on:
-  workflow_dispatch:
-  pull_request:
-  push:
-    branches:
-      - master
-      - stable
-      - v*
+on: push
 
 concurrency:
   group: test-${{ github.ref }}
@@ -20,13 +13,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ['ubuntu-latest', 'windows-2022', 'macos-13']
-        python: ['3.8', '3.9', '3.10', '3.11', '3.12', '3.13.0-alpha.3', 'pypy3.9-v7.3.15', 'pypy3.10-v7.3.15']
-
+        os: ['windows-2022']
+        python: ['3.12']
+    defaults:
+      run:
+        shell: "msys2 {0}"
     name: "Python ${{ matrix.python }} / ${{ matrix.os }}"
     runs-on: ${{ matrix.os }}
 
     steps:
+    - uses: spatial-model-editor/setup-ci@2024.04.23
+      with:
+        sme_deps: '2024.04.24'
+
     - uses: actions/checkout@v4
       with:
         submodules: true
@@ -36,13 +35,6 @@ jobs:
       with:
         python-version: ${{ matrix.python }}
         cache: 'pip'
-
-    - name: Install the latest CMake
-      uses: lukka/get-cmake@latest
-
-    - name: Install Eigen
-      if: matrix.os == 'ubuntu-latest'
-      run: sudo apt-get -y install libeigen3-dev
 
     - name: Install PyTest
       run: |
@@ -58,7 +50,7 @@ jobs:
         cmake -S . -B build -DNB_TEST_STABLE_ABI=ON -DNB_TEST_SHARED_BUILD="$(python3 -c 'import sys; print(int(sys.version_info.minor>=11))')"
 
     - name: Build C++
-      run: cmake --build build -j 2
+      run: cmake --build build -j 4
 
     - name: Run tests
       run: >
