--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,10 +40,10 @@ jobs:
       run: |
         python -m pip install pytest pytest-github-actions-annotate-failures typing_extensions
 
-    - name: Install NumPy
-      if: ${{ !startsWith(matrix.python, 'pypy') && !contains(matrix.python, 'alpha') }}
-      run: |
-        python -m pip install numpy scipy
+#    - name: Install NumPy
+#      if: ${{ !startsWith(matrix.python, 'pypy') && !contains(matrix.python, 'alpha') }}
+#      run: |
+#        python -m pip install numpy scipy
 
     - name: Configure
       run: >
